--- a/omni.cabal
+++ b/omni.cabal
@@ -2,9 +2,9 @@ Name:                omni
 Version:             0.1
 Synopsis:            Project Synopsis Here
 Description:         Project Description Here
-License:             BSD3
-Author:              Flavio Botelho
-Maintainer:          fezsentido@gmail.com
+License:             AllRightsReserved
+Author:              Author
+Maintainer:          maintainer@example.com
 Stability:           Experimental
 Category:            Web
 Build-type:          Simple
@@ -26,8 +26,7 @@ Executable omni
     bytestring                >= 0.9.1   && < 0.11,
     heist                     >= 1.0     && < 1.1,
     map-syntax                >= 0.2     && < 0.3,
-    monad-control             >= 0.3     && < 0.4,
-    monad-logger	            >= 0.3     && < 0.4,
+    monad-control             >= 1.0     && < 1.1,
     mtl                       >= 2       && < 3,
     snap                      >= 1.0     && < 1.1,
     snap-core                 >= 1.0     && < 1.1,
@@ -35,21 +34,16 @@ Executable omni
     snap-loader-static        >= 1.0     && < 1.1,
     text                      >= 0.11    && < 1.3,
     time                      >= 1.1     && < 1.6,
-    transformers              >= 0.4,
     xmlhtml                   >= 0.1,
     esqueleto                 >= 2.1,
     persistent                >= 2.1,
     persistent-postgresql     >= 2.1,
     snaplet-persistent        == 0.4.1.1
 
-  if flag(old-base)
-    build-depends:
-      base                      >= 4        && < 4.4,
-      lens                      >= 3.7.6    && < 3.8
-  else
-    build-depends:
-      base                      >= 4.4      && < 5,
-      lens                      >= 3.7.6    && < 4.7
+
+  build-depends:
+    base                      >= 4.4      && < 5,
+    lens                      >= 3.7.6    && < 4.7
 
   if flag(development)
     build-depends:
